# kiri

./: .gitignore  Cargo.toml  README.md  singeta.toml
src/: get_devices.rs  lib.rs  load_config.rs  main.rs  print_info.rs  read_config.rs  read_events.rs  read_keys.rs  singeta.toml  write_keys.rs
