[package]
name = "kiri"
version = "0.1.0"
authors = ["nanikamado <nanikamado@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.67"
log = "0.4.14"
env_logger = "0.9.0"
evdev = "0.11.3"
evdev-keys = { path = "../evdev-keys" }