[package]
name = "kiri"
version = "0.1.0"
authors = ["nanikamado <nanikamado@gmail.com>"]
edition = "2021"
description = "A key remapper."
repository = "https://github.com/nanikamado/kiri"
license = "Unlicense OR Apache-2.0"

[dependencies]
libc = "0.2.138"
log = "0.4.17"
evdev = "0.12.1"
evdev-keys = "0.2.0"
rustc-hash = "1.1.0"
